# msg2mq

./: CMakeLists.txt  README.md  main.c  mq.c  mq.h
